chore: build e deploy automático (v3.1.2)

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,10 @@ desktop.ini
 .env.local
 .env.*.local
 
+# Firebase service account (credenciais; usar variável no Vercel)
+**/lovable*-firebase-adminsdk-*.json
+docs/*-firebase-adminsdk-*.json
+
 # Temporários
 *.tmp
 temp/
