--- a/api/.env.example
+++ b/api/.env.example
@@ -4,9 +4,12 @@
 # Open Router (improvePrompt)
 OPENROUTER_API_KEY=
 
-# createPanelUser: Firebase Admin (JSON do service account, uma linha)
-# Firebase Console → Configurações do projeto → Contas de serviço → Gerar nova chave privada
+# createPanelUser / listPanelUsers / updatePanelUser / deletePanelUser: Firebase Admin
+# JSON do service account (uma linha). Firebase Console → Contas de serviço → Gerar nova chave privada
 FIREBASE_SERVICE_ACCOUNT_JSON=
 
-# createPanelUser: e-mails master (separados por vírgula), opcional
+# Realtime Database URL (opcional; padrão: https://PROJECT_ID-default-rtdb.firebaseio.com)
+# FIREBASE_DATABASE_URL=
+
+# E-mails master (separados por vírgula), opcional
 MASTER_EMAILS=luan93dutra@gmail.com
