feat(v3.2.0): listagem de usuarios do painel e melhorias gerais

--- a/api/.env.example
+++ b/api/.env.example
@@ -4,9 +4,13 @@
 # Open Router (improvePrompt)
 OPENROUTER_API_KEY=
 
-# createPanelUser: Firebase Admin (JSON do service account, uma linha)
+# validateLicense/createPanelUser: Firebase Admin (JSON do service account, uma linha)
 # Firebase Console → Configurações do projeto → Contas de serviço → Gerar nova chave privada
 FIREBASE_SERVICE_ACCOUNT_JSON=
+
+# Realtime Database URL (opcional; fallback usa project_id do JSON)
+# Ex: https://lovable2-e6f7f-default-rtdb.firebaseio.com
+FIREBASE_DATABASE_URL=
 
 # createPanelUser: e-mails master (separados por vírgula), opcional
 MASTER_EMAILS=luan93dutra@gmail.com
