--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
   "buildCommand": "echo ok",
   "outputDirectory": ".",
   "functions": {
+    "api/sendPrompt.js": {
+      "memory": 256,
+      "maxDuration": 30
+    },
     "api/improvePrompt.js": {
       "memory": 256,
       "maxDuration": 60
