feat: download de projeto com limpeza automatica do branding Lovable

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -6,6 +6,7 @@
     "permissions": [
         "activeTab",
         "alarms",
+        "downloads",
         "scripting",
         "sidePanel",
         "storage",
